# EvoNN-Research

./: .gitignore  CONSOLIDATED_PLAN.md  LAB_PLAN.md  PARALLEL_WORK_GUIDE.md  PROGRAM_CHARTER.md  PROGRAM_PLAN.md  pyproject.toml  spec-comparison.html
EvoNN-Compare/: README.md  backend-capabilities.json  pyproject.toml
EvoNN-Compare/src/evonn_compare/: __init__.py
EvoNN-Compare/tests/: test_import.py
EvoNN-Contenders/: README.md  backend-capabilities.json  pyproject.toml
EvoNN-Primordia/: README.md  backend-capabilities.json  pyproject.toml
EvoNN-Primordia/src/evonn_primordia/: __init__.py
EvoNN-Primordia/tests/: test_import.py
EvoNN-Prism/: README.md  backend-capabilities.json  pyproject.toml
EvoNN-Prism/src/prism/: __init__.py
EvoNN-Prism/tests/: test_import.py
EvoNN-Shared/: README.md  backend-capabilities.json  pyproject.toml
EvoNN-Shared/src/evonn_shared/: __init__.py  backend_contract.py  benchmarks.py  budgets.py  canonical.py  catalog.py  exports.py  rng.py  telemetry.py  workspace_contract.py
EvoNN-Shared/tests/: test_budgets.py  test_canonical.py  test_catalog.py  test_exports.py  test_import.py  test_rng.py  test_telemetry.py
EvoNN-Shared/tests/fixtures/catalog/canonical/catalog/: canonical_ids.yaml  contract_alpha_classification.yaml  contract_beta_regression.yaml
EvoNN-Shared/tests/fixtures/catalog/canonical/suites/parity/: contract_parity_pack.yaml
EvoNN-Shared/tests/fixtures/catalog/fallback-a/: contract_fallback_sequence.yaml
EvoNN-Shared/tests/fixtures/catalog/fallback-packs/: contract_fallback_pack.yaml
EvoNN-Shared/tests/fixtures/catalog/invalid/: duplicate_nested.yaml  duplicate_top.yaml  unknown_field.yaml
EvoNN-Shared/tests/fixtures/catalog/invalid/registry-mismatch/catalog/: canonical_ids.yaml  contract_registry_mismatch.yaml
EvoNN-Shared/tests/fixtures/invalid/: b0-capability.json  product-evaluation.json  wrong-schema.json
EvoNN-Shared/tests/golden/: canonical-v1.json
EvoNN-Shared/tests/golden/exports/: manifest.json  results.json  summary.json
EvoNN-Stratograph/: README.md  backend-capabilities.json  pyproject.toml
EvoNN-Topograph/: README.md  backend-capabilities.json  pyproject.toml
EvoNN-Topograph/src/topograph/: __init__.py
EvoNN-Topograph/tests/: test_import.py
archive/: 2026-07-17-LAB_PLAN_CRITIQUE.md  2026-07-17-gate-b0-task-2-provenance-controls-report.md  2026-07-18-gate-b0-task-3-workspace-skeletons-report.md  2026-07-18-gate-b0-task-4-import-boundaries-report.md  2026-07-18-gate-b0-task-5-ci-bootstrap-report.md  2026-07-19-b0-closure-design.md  2026-07-19-b0-closure-implementation-plan.md
claude-spec/: 00-scope-and-goals.md  01-system-architecture.md  02-shared-benchmarks.md  03-budget-and-fairness.md  04-telemetry-and-artifacts.md  05-compare.md  06-contenders.md  07-engine-prism.md  08-engine-topograph.md  09-engine-stratograph.md  10-engine-primordia.md  11-seeding-and-transfer.md  12-evidence-and-statistics.md  13-runtime-portability.md  14-quality-diversity-and-multiobjective.md  15-observability-and-dashboards.md  16-legacy-tracks.md  17-roadmap-and-horizons.md  18-engineering-standards.md  19-product-interop.md  README.md
claudex-spec/: 00-charter.md  01-product-and-ux.md  02-system-architecture.md  03-domain-and-contracts.md  04-data-and-benchmarks.md  05-search-portfolio.md  06-training-evaluation-and-budgets.md  07-orchestration-and-reliability.md  08-persistence-and-artifacts.md  09-runtime-and-portability.md  10-web-cli-and-observability.md  11-deployment-and-inference.md  12-security-privacy-and-supply-chain.md  13-testing-and-release.md  14-technology-decisions.md  15-roadmap.md  16-traceability-risks-glossary.md  17-acceptance-criteria.md  18-v1-conformance-matrix.md  19-research-interop.md  README.md
(+94 files in other folders)
