[project]
name = "evonn-workspace"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "PyYAML",
    "ruff",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.workspace]
members = [
    "EvoNN-Shared",
    "EvoNN-Compare",
    "EvoNN-Contenders",
    "EvoNN-Prism",
    "EvoNN-Topograph",
    "EvoNN-Stratograph",
    "EvoNN-Primordia",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
    "all_check_scripts: executes the full eight-script cross-host local matrix",
    "b0_policy_script_selftest: invokes b0-policy-checks.sh and must be excluded by that script",
]
testpaths = [
    "tests",
    "EvoNN-Shared/tests",
    "EvoNN-Compare/tests",
    "EvoNN-Contenders/tests",
    "EvoNN-Prism/tests",
    "EvoNN-Topograph/tests",
    "EvoNN-Stratograph/tests",
    "EvoNN-Primordia/tests",
    "shared-benchmarks/tests",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
