[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "evonn-compare"
version = "0.0.0"
description = "B0 comparison orchestration skeleton for EvoNN"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["evonn-shared"]

[tool.uv.sources]
evonn-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/evonn_compare"]
