[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "evonn-primordia"
version = "0.0.0"
description = "B0 Primordia engine skeleton for EvoNN"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evonn-shared",
    "numpy>=2.1,<3",
    "mlx>=0.25,<1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
evonn-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/evonn_primordia"]
