[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "evonn-prism"
version = "0.0.0"
description = "B0 Prism engine skeleton for EvoNN"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["evonn-shared"]

[tool.uv.sources]
evonn-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]
