[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "evonn-shared"
version = "0.0.0"
description = "B0 shared contract substrate skeleton for EvoNN"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/evonn_shared"]
