[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "evonn-topograph"
version = "0.0.0"
description = "B0 Topograph engine skeleton for EvoNN"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["evonn-shared"]

[tool.uv.sources]
evonn-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/topograph"]
